Fix some layout issues with Safari/Sleipnir browsers

--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,14 @@
 body {
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, sans-serif;
   font-weight: 300;
+  -webkit-font-smoothing: subpixel-antialiased;
 }
+
+/*html:-webkit-full-screen-ancestor {
+  background-color: inherit; }
+
+html:-moz-full-screen-ancestor {
+  background-color: inherit; }*/
 
 .reveal .slides section .fragment.grow.visible {
   color: #31708f;
@@ -40,6 +47,7 @@ div .panel-default {
   margin-bottom: 0.1em;
   z-index: 100;
   background-color: transparent;
+
   /*border-bottom: none;*/
 }
 
@@ -79,7 +87,8 @@ div .panel-default {
 .reveal {
   font-size: 1.9em;
   letter-spacing: 0.02em;
-  color: #53545E; }
+  color: #53545E;
+}
 
 .reveal strong {
   font-weight: 500;
@@ -98,7 +107,9 @@ div .panel-default {
   line-height: 0.9em;
   letter-spacing: 0.04em;
   text-transform: none;
-  text-shadow: none; }
+  text-shadow: none;
+  -webkit-hyphens: none;
+}
 
 .reveal .slide-number {
   color: #53545E;
@@ -112,7 +123,8 @@ div .panel-default {
   font-size: 0.5em;
   font-weight: bold;
   text-align: center;
-  vertical-align: middle; }
+  vertical-align: middle;
+  background-color: transparent;}
 
   /*********************************************
  * IMAGES
